--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -6,14 +6,14 @@
 # https://blowfish.page/docs/configuration/#theme-parameters
 
 colorScheme = "blowfish"
-defaultAppearance = "light" # valid options: light or dark
+defaultAppearance = "dark" # valid options: light or dark
 autoSwitchAppearance = true
 
 enableSearch = true
 enableCodeCopy = false
 
 # mainSections = ["section1", "section2"]
-# robots = ""
+robots = "robots.txt"
 
 disableImageOptimization = false
 disableTextInHeader = false
@@ -30,8 +30,8 @@ disableTextInHeader = false
 
 [footer]
   showMenu = true
-  showCopyright = true
-  showThemeAttribution = true
+  showCopyright = false
+  showThemeAttribution = false
   showAppearanceSwitcher = true
   showScrollToTop = true
 
